syntax = "proto3";

package inventory;

option go_package = "./proto";

service InventoryService {
  // Reserves stock for an order
  rpc ReserveStock(ReserveRequest) returns (ReserveResponse);
  
  // Releases stock (Compensation for Saga)
  rpc ReleaseStock(ReleaseRequest) returns (ReleaseResponse);

  // Gets current stock levels
  rpc GetStock(GetStockRequest) returns (GetStockResponse);

  // Lists all available products
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}

message ReserveRequest {
  string order_id = 1;
  string product_id = 2;
  int32 quantity = 3;
}

message ReserveResponse {
  bool success = 1;
  string message = 2;
}

message ReleaseRequest {
  string order_id = 1;
  string product_id = 2;
  int32 quantity = 3;
}

message ReleaseResponse {
  bool success = 1;
  string message = 2;
}

message GetStockRequest {
  string product_id = 1;
}

message GetStockResponse {
  string product_id = 1;
  int32 quantity = 2;
}

message ListProductsRequest {}

message ProductInfo {
  string product_id = 1;
  string name = 2;
  double price = 3;
  int32 quantity = 4;
}

message ListProductsResponse {
  repeated ProductInfo products = 1;
}
